Changing protected route name

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -15,7 +15,7 @@
     <br />
     <a href="/login-success">Login Screen</a>
     <br />
-    <a href="/protected-route">Protected resource</a>
+    <a href="/protected">Protected resource</a>
     <br>
     <a href="/admin-resource">Admin resource</a>
   </body>
