--- a/views/login-success.ejs
+++ b/views/login-success.ejs
@@ -8,7 +8,7 @@
 
     <p>
       You successfully logged in. -->
-      <a href="/protected-route">Go to protected route</a>
+      <a href="/protected">Go to protected route</a>
     </p>
   </body>
 </html>
